refactor: offset 방식의 페이지네이션을 cursor 방식의 페이지네이션으로 변경 - 이전페이지는 메모리의 cursorStack으로 관리